[gd_scene load_steps=4 format=3 uid="uid://2sm02yq0l02v"]

[ext_resource type="Script" path="res://body_item.gd" id="1_ce368"]
[ext_resource type="Texture2D" uid="uid://vdwlfyy23nt2" path="res://icon.svg" id="1_l7prm"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_6q8q8"]
size = Vector2(121, 119)

[node name="RBItem" type="RigidBody2D"]
position = Vector2(736, 446)
script = ExtResource("1_ce368")
metadata/_edit_group_ = true

[node name="RBItemShape" type="CollisionShape2D" parent="."]
position = Vector2(-0.5, 0.5)
shape = SubResource("RectangleShape2D_6q8q8")

[node name="RBItemSprite" type="Sprite2D" parent="."]
texture = ExtResource("1_l7prm")

[connection signal="body_shape_entered" from="." to="." method="_on_body_shape_entered"]
[connection signal="input_event" from="." to="." method="_on_input_event"]
